--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div id="home" style="text-align: center;">
         <h2 style="color: white; font-size: 40px;">Inicio</h2>
         <p class="content-text" style="color: white; font-size: 20px;">Material de apoyo-Estructuras Discretas.</p>
-        <p style="color: white; font-size: 20px;">¿Quieres interactuar con nuestro bot?<br><a href="https://t.me/Mathematicaldiscretbot" style="color: white;">Pulsa aquí</a></p>
+        <p style="color: rgb(16, 68, 236); font-size: 20px;">¿Quieres interactuar con nuestro bot?<br><a href="https://t.me/Mathematicaldiscretbot" style="color: rgb(173, 235, 4);">Pulsa aquí</a></p>
     </div>
     
     <div id="info" class="content info" style="display:true;">
