--- a/index.html
+++ b/index.html
@@ -148,11 +148,10 @@
         <p style="color: rgb(16, 68, 236); font-size: 20px;">¿Quieres interactuar con nuestro bot?<br><a href="https://t.me/Mathematicaldiscretbot" style="color: rgb(173, 235, 4);">Pulsa aquí</a></p>
     </div>
     
-    <div id="info" class="content info" style="display:true;">
+    <div id="info" class="content info" style="display:none;">
         <h2>Información</h2>
-        <p class="content-text">NL: NL: NL: NE: </p>
         <button class="edit-btn" onclick="checkAndLoadContentForEdit('info')">Editar</button>
-    </div>
+    </div>   
       
     <div id="libros" class="content libros" style="display:none;">
         <h2>Libros Facultad de Ingenieria</h2>
